--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="section-heading">
           <h1>Грузовые перевозки</h1>
           <div class="text-wrap">
-            <p>Перевозка крупногабаритных грузов по России и Европе. Полное экспедирование, страхование, упаковка и хранение грузов</p>
+            <p>Перевозка крупногабаритных грузов по Европе. Полное экспедирование, страхование, упаковка и хранение грузов</p>
           </div>
         </div>
       </div>
