--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <div class="about-carusel">
           <div class="section-heading">
             <h2>грузоперевозки по европе</h2>
-            <p>Страны Евросоюза, а также Украина,
-              Белоруссия со всеми документами.</p>
+            <p>Страны Евросоюза, а также Украина, со всеми документами.</p>
             <a class="btn" href="#">ПОДРОБНЕЕ</a>
           </div>
           <div class="carusel-icon">
@@ -152,7 +151,6 @@
       </div>
     </div>
     <div class="maps" style="background-image: url(img/maps.png);">
-      <img src="img/maps.png" alt="image description">
     </div>
   </main>
   <footer>
@@ -163,15 +161,15 @@
         </div>
         <div class="footer-menu">
           <div class="address">
-            <p>123456, Санкт-Петербург, Невский пр-кт 127</p>
-            <a href="mailto:sales@log.ru">sales@log.ru</a>
+            <p>123456, Харьков, Науки пр-кт 48</p>
+            <a href="mailto:sales@log.ua">sales@log.ua</a>
           </div>
           <div class="contactacts">
-            <a href="tel:+78123445665">+7 (812) 344-56-65</a>
-            <a href="tel:+78123445665">+7 (812) 344-56-65</a>
+            <a href="tel:+380683445665">+38 (068) 344-56-65</a>
+            <a href="tel:+380683445665">+38 (068) 344-56-65</a>
           </div>
           <div class="corypight">
-            <p>Разработано - D-E-N.ru</p>
+            <p>Разработано - M-A-N.ua</p>
           </div>
         </div>
       </div>
